<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/cl_Main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:contentDescription="@string/ibtn_Save"
    tools:context=".MainActivity">

    <TextView
        android:id="@+id/tv_Hello"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="sans-serif-smallcaps"
        android:text="@string/tv_Hello"
        android:textColor="@color/purple_500"
        android:textSize="30sp"
        android:textStyle="bold"
        android:typeface="normal"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintHorizontal_bias="0.333"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.169" />

    <TextView
        android:id="@+id/tv_Label"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/tv_Label"
        android:textColor="@color/black"
        android:textSize="20sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.17"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tv_Hello"
        app:layout_constraintVertical_bias="0.102" />

    <EditText
        android:id="@+id/pl_Name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:autofillHints=""
        android:ems="10"
        android:hint="@string/pl_Name"
        android:inputType="date|textPersonName|time"
        android:text="@string/pl_Name"
        android:textColorHint="#78909C"
        android:textSize="20sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.229"
        app:layout_constraintStart_toEndOf="@+id/tv_Label"
        app:layout_constraintTop_toBottomOf="@+id/tv_Hello"
        app:layout_constraintVertical_bias="0.088" />

    <Spinner
        android:id="@+id/spnr_UserT"
        android:layout_width="245dp"
        android:layout_height="51dp"
        android:layout_marginTop="52dp"
        android:backgroundTint="@color/purple_500"
        android:entries="@array/user_type"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.771"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/pl_Name"
        app:layout_constraintVertical_bias="0.0" />

    <Button
        android:id="@+id/btn_Change"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:backgroundTint="@color/purple_500"
        android:fontFamily="sans-serif"
        android:text="@string/btn_Change"
        android:textSize="20sp"
        android:typeface="normal"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.445"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/spnr_UserT"
        app:layout_constraintVertical_bias="0.664" />

    <Switch
        android:id="@+id/swch_Mode"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:minHeight="48dp"
        android:text="@string/swch_Mode"
        app:layout_constraintBottom_toTopOf="@+id/tv_Hello"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.922"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.447" />

    <CheckBox
        android:id="@+id/chkb_CIT"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/chkb_CIT"
        android:textSize="20sp"
        app:layout_constraintBottom_toTopOf="@+id/btn_Change"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.059"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/spnr_UserT"
        app:layout_constraintVertical_bias="0.213" />

</androidx.constraintlayout.widget.ConstraintLayout>